[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/play2.png" type="Texture" id=1]
[ext_resource path="res://PlayBtn.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 114.21, 66.0699 )

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[node name="PlayBtn" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
material = SubResource( 3 )
texture = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_PlayBtn_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PlayBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayBtn_mouse_exited"]
